# mobile_chat

./: CMakeCache.txt  Makefile  cmake_install.cmake
backend/: CMakeLists.txt
backend/.cache/clangd/index/: communicator.cpp.7D775CF59D6A6443.idx  communicator.h.24A499A9939FF53D.idx  handlers.h.8C6CBA6BDD17082D.idx  iDatabase.h.6577D8AF2F472322.idx  iRequestHandler.h.1898AB24855652E5.idx  jsonDeserializer.cpp.AF88B978D753FCCE.idx  jsonDeserializer.h.D79B33BD9242AE4F.idx  jsonDesrializer.h.E47162D495F219DB.idx  jsonSerializer.cpp.3E39EBC926727754.idx  jsonSerializer.h.B4B5603BD1757BB8.idx  loggedUser.cpp.14C8F74E9D4A684E.idx  loggedUser.h.0869F984BEAE134E.idx  loginManager.cpp.6ADB6D9111332C3C.idx  loginManager.h.E479CE73A8B8B4C0.idx  loginRequestHandler.cpp.ACD21E47490EB87C.idx  loginRequestHandler.h.A9DE74F5E6DD119E.idx  main.cpp.2A55EA01D6126980.idx  requestHandlerFactory.cpp.472C9B0A77C78FDF.idx  requestHandlerFactory.h.58E2A6F6C08532BC.idx  requests.h.3210C2535CC2D9CA.idx  responses.h.8A11D22983298150.idx  server.cpp.9F00CD0747E69F49.idx  (+5 more)
backend/src/: CMakeLists.txt  CPPLINT.cfg  communicator.cpp  communicator.h  handlers.h  iDatabase.h  iRequestHandler.h  jsonDeserializer.cpp  jsonDeserializer.h  jsonDesrializer.cpp  jsonSerializer.cpp  jsonSerializer.h  loggedUser.cpp  loggedUser.h  loginManager.cpp  loginManager.h  loginRequestHandler.cpp  loginRequestHandler.h  main.cpp  requestHandlerFactory.cpp  requestHandlerFactory.h  requests.h  responses.h  server.cpp  server.h  sqlite3.h  sqliteDatabase.cpp  sqliteDatabase.h
src/: Makefile  cmake_install.cmake
(+29 files in other folders)
